# taskgo-api

./: .env  Cargo.toml
migrations/2021-10-09-135838_create_taskgo/: down.sql  up.sql
src/: constants.rs  main.rs  schema.rs  server.rs
src/db/: db.rs
src/models/: collection.rs  mod.rs  task.rs
src/transport/: collection_handler.rs  mod.rs  task_handler.rs
