[package]
name = "taskgo-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = {  version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
